--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
 }
 
 
-.header {
+#header {
   display: flex;
   justify-content: flex-end;
   border: 4px solid red;
   height: 5vh;
   width: 100%;
+  background-color: grey;
 }
 
-.header a {
+#header a {
   color: white;
   font-size: 25px;
   text-decoration: none;
@@ -24,9 +25,96 @@ body {
   margin-right: 2%;
 }
 
+
+#header a:hover {
+  font-size: 200%;
+}
+
+
+
+
+
+/*-------------------------------------main header code-------------------------------------*/
 .mainHeader{
 border: 4px solid red;
 width: 100%;
 height: 95vh;
+display:flex;
+flex-direction: column;
+
+align-items: flex-start;
+justify-content: center;
+flex-wrap: wrap;
+
+color: white;
+
 }
 
+.mainHeader h1{
+  color: white;
+  margin-bottom: 20%;
+  margin-left: 7%;
+  }
+
+  .mainHeader p{
+    color: white;
+    margin-bottom: 1%;
+    margin-left: 7%;
+  }
+/*-------------------------------------About code-------------------------------------*/
+
+#About{
+  width: 100%;
+  height: 100vh;
+  border: 4px solid red;
+
+  display: flex;
+  flex-direction: row;
+  color:white;
+}
+
+
+#About #picture img{ 
+width: 400px;
+}
+
+#picture{
+  border: 4px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  
+}
+
+#text{
+  border: 4px solid red;
+  width: 60%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 50px;
+}
+/*-------------------------------------Project code-------------------------------------*/
+
+
+#Project{
+border: 4px solid red;
+width: 100%;
+height:100vh;
+color:white;
+
+}
+
+/*-------------------------------------Contact code-------------------------------------*/
+
+
+
+#Contact{
+  border: 4px solid red;
+  width: 100%;
+  height:100vh;
+  color: white;
+  
+  }
