--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0%;
   padding: 0;
-border: 0;}
+box-sizing: border-box;}
 
 body {
   background-color: #031e2a	;
@@ -123,7 +123,7 @@ color:white;
     border: 4px solid red;
     width:100%;
     height:15vh;
-    
+   font-size: 45px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -131,13 +131,53 @@ color:white;
 
   }
 
-
+/*----------------------Form css---------------------------*/
   #ContactForm{
     border: 4px solid red;
     width:100%;
     height:70vh;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+  
+  #ContactForm form{
+    border: 4px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;   
+     width: 50%;
+    height: 80%;
+    border-radius: 15px;
+  }
+
+  #ContactForm input{
+    border-radius: 5px;
+    width: 35%;
+    height: 7%;
+  }
+
+  #ContactForm textarea{
+    border-radius: 5px;
+    width: 35%;
+    margin-bottom: 5%;
+  
+  }
+
+  #ContactForm button{
+     width: 10%;
+    height: 7%;
+    cursor: pointer;
+  }
+
+  #ContactForm h4{
+   margin: 10px;
+   font-size: 25px;
+  }
+
+/*----------------------Form css---------------------------*/
+
 
   #Footer{
     border: 4px solid red;
