--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 box-sizing: border-box;}
 
 body {
-  background-color: #031e2a	;
+  background-color: rgb(0, 0, 0)	;
 }
 
 
@@ -13,6 +13,8 @@ body {
   justify-content: flex-end;
   height: 5vh;
   width: 100%;
+  border: 4px solid red;
+
 }
 
 #header a {
@@ -34,11 +36,12 @@ body {
 
 /*-------------------------------------main header code-------------------------------------*/
 .mainHeader{
+  border: 4px solid red;
+
 width: 100%;
 height: 95vh;
 display:flex;
 flex-direction: column;
-
 align-items: flex-start;
 justify-content: center;
 flex-wrap: wrap;
@@ -51,13 +54,35 @@ color: white;
   color: white;
   margin-bottom: 20%;
   margin-left: 7%;
+  border: 4px solid red;
+
   }
 
   .mainHeader p{
+    border: 4px solid red;
     color: white;
     margin-bottom: 1%;
     margin-left: 7%;
   }
+
+.mainHeader button{
+  
+cursor: pointer;
+border-radius: 400px;
+height: 75px;
+
+width: 100px;
+border: none;
+}
+
+.mainHeader button:hover{
+
+  background-color: rgb(80, 80, 82);
+ 
+  }
+
+
+
 /*-------------------------------------About code-------------------------------------*/
 
 #About{
@@ -101,8 +126,33 @@ border: 4px solid red;
 width: 100%;
 height:100vh;
 color:white;
-
+text-align: center;
 }
+
+#examples{
+  border: 4px solid red;
+  width: 100%;
+  height:80vh;
+}
+
+#Skills{
+  border: 4px solid red;
+  width: 100%;
+  height:20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#Skills img{
+  border: 4px solid red;
+  height: 40%;
+  margin: 3%;
+  margin-bottom: 5%;
+}
+
+
+
 
 /*-------------------------------------Contact code-------------------------------------*/
 
@@ -123,7 +173,7 @@ color:white;
     border: 4px solid red;
     width:100%;
     height:15vh;
-   font-size: 45px;
+   font-size: 200%;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -143,39 +193,79 @@ color:white;
   
   #ContactForm form{
     border: 4px solid red;
-
-    background-color: #474a4b;
+    background-color:  #04151d;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;   
-     width: 30%;
+     width: 45%;
     height: 85%;
     border-radius: 15px;
+    color:white;
   }
 
   #ContactForm input{
     border-radius: 5px;
-    width: 35%;
+    width: 50%;
     height: 7%;
+    border: none;
+    background: none;
+    background-color:  rgb(128, 128, 128,0.1);
+
   }
+
+  textarea::placeholder {
+    color: white;
+    text-align: center;
+    opacity: .5;
+  }
+  
+  textarea {
+    color: white;
+  }
+
+  input{
+    color: white;
+  }
+  input::placeholder{
+    color: white;
+    opacity: .5;
+
+  }
+  
+
+
 
   #ContactForm textarea{
     border-radius: 5px;
-    width: 35%;
+    width: 50%;
     margin-bottom: 5%;
-  
+    border: none;
+    background: none;
+    background-color:  rgb(128, 128, 128,0.1);
   }
+
+
 
   #ContactForm button{
      width: 10%;
     height: 7%;
+    background:none;
+    background-color:  rgb(128, 128, 128,0.5);
+    border: none;
     cursor: pointer;
   }
+  #ContactForm button:hover{
+    background-color:  rgb(128, 128, 128);
+
+
+ }
+
 
   #ContactForm h4{
    margin: 10px;
    font-size: 25px;
+
   }
 
 /*----------------------Footer css---------------------------*/
@@ -212,11 +302,12 @@ background-color: inherit;
 
 .dropdown img{
 height: 25px;
+margin-right: 50px;
 }
 
 .dropdown a{
 display: block;
-color:red;
+color:rgb(255, 255, 255);
 text-decoration: none;
 padding: 10px 15px;
 }
@@ -224,8 +315,10 @@ padding: 10px 15px;
 .dropdown .content{
   display: none;
   position: absolute;
-  background-color: blue;
+  background-color:  rgb(4, 21, 29);
   box-shadow: 2px 2px 5px black;
+  right: 50px;
+  border-radius: 10px;
 }
 
 .dropdown:hover .content{
@@ -233,7 +326,7 @@ display: block;
 }
 
 .dropdown a:hover{
-background-color: rgba(255, 0, 0, 0.594);
+  background-color:  rgba(29, 9, 4, 0.5);
 }
 
 .navbar {
