--- a/style.css
+++ b/style.css
@@ -68,10 +68,10 @@ color: white;
 .mainHeader button{
   
 cursor: pointer;
-border-radius: 400px;
-height: 75px;
 
-width: 100px;
+height: 5em;
+width: 7em;
+border-radius: 5em;
 border: none;
 }
 
@@ -129,11 +129,8 @@ color:white;
 text-align: center;
 }
 
-#examples{
-  border: 4px solid red;
-  width: 100%;
-  height:80vh;
-}
+
+
 
 #Skills{
   border: 4px solid red;
@@ -148,15 +145,13 @@ text-align: center;
   border: 4px solid red;
   height: 40%;
   margin: 3%;
-  margin-bottom: 5%;
+  margin-bottom: 8%;
 }
 
 
 
 
 /*-------------------------------------Contact code-------------------------------------*/
-
-
 
 #Contact{
   border: 4px solid red;
@@ -177,8 +172,6 @@ text-align: center;
     display:flex;
     align-items: center;
     justify-content: center;
-   
-
   }
 
 /*----------------------Form css---------------------------*/
@@ -197,9 +190,11 @@ text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;   
+    justify-content: center;  
+     
      width: 45%;
-    height: 85%;
+     height: 85%;
+
     border-radius: 15px;
     color:white;
   }
@@ -210,6 +205,7 @@ text-align: center;
     height: 7%;
     border: none;
     background: none;
+    padding-left: 10px;
     background-color:  rgb(128, 128, 128,0.1);
 
   }
@@ -232,11 +228,8 @@ text-align: center;
     opacity: .5;
 
   }
-  
-
-
-
   #ContactForm textarea{
+    padding: 10px;
     border-radius: 5px;
     width: 50%;
     margin-bottom: 5%;
@@ -257,8 +250,6 @@ text-align: center;
   }
   #ContactForm button:hover{
     background-color:  rgb(128, 128, 128);
-
-
  }
 
 
