--- a/style.css
+++ b/style.css
@@ -434,9 +434,11 @@ input::placeholder {
   right: 50px;
   border-radius: 10px;
 }
+
 .dropdown:hover .content {
   display: block;
 }
+
 .dropdown a:hover {
   background-color: rgb(73, 65, 63);
   border-radius: 10px;
@@ -484,33 +486,60 @@ input::placeholder {
 
   /*--------------About page media-----------------*/
 
-#text {
-  align-items: center;
-  justify-content: center;
+  #text {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding-left: 1%;
+  }
+
+  #text p {
+    font-size: 1.15em;
+    margin: 1%;
+  }
+
+  #About #picture img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+
+}
+
+
+
+#UIProjects {
+  color: #F4F3F2;
   text-align: center;
-  padding-left: 1%;
 }
 
-#text p {
-  font-size: 1.15em;
-  margin: 1%;
+
+
+#UIProjects h2{
+margin-top: 10px;  
 }
 
-#About #picture img {
-  width: 100%;
+#UIProjects ul {
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  justify-content: center;
+  align-items:start;
+  gap:15px;
+
+}
+
+
+#UIProjects li {
+  width: 325px;
+  flex-wrap: wrap;
+}
+
+
+#UIProjects img {
+  color: #F4F3F2;
   height: auto;
-  border-radius: 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
+  width: 100%;
 
 }
