--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body {
 
 #Project {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   color: #F4F3F2;
   text-align: center;
   background-color: hsla(212, 60%, 10%, 0.904);
@@ -152,7 +152,6 @@ body {
 
 
 #ExampleHeader {
-  height: 13vh;
   font-size: 50px;
   padding-top: 1%;
 
@@ -166,10 +165,31 @@ body {
 
 #Examples {
   width: 100%;
-  height: 67vh;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+
+#ExampleSkills {
+  border-bottom: 3px solid #F4F3F2;
+  width: 75%;
+  margin: auto;
+
+}
+
+#Skills {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#Skills img {
+  width: 4%;
+  height: auto;
+  margin: 3%;
 }
 
 
@@ -237,14 +257,14 @@ body {
   display: flex;
 }
 
+
 .popup-button {
   display: inline-block;
   background: none;
   border: none;
   cursor: pointer;
   padding: 0;
-  width: 20%;
-
+  width: 300px;
 }
 
 .popup-button img {
@@ -254,26 +274,6 @@ body {
 }
 
 
-#ExampleSkills {
-  border-bottom: 3px solid #F4F3F2;
-  height: 5vh;
-  width: 75%;
-  margin: auto;
-
-}
-
-#Skills {
-  width: 100%;
-  height: 15vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#Skills img {
-  height: 50%;
-  margin: 3%;
-}
 
 /*-------------------------------------Contact code-------------------------------------*/
 
@@ -480,10 +480,6 @@ input::placeholder {
     height: 85%;
   }
 
-
-
-
-
   /*--------------About page media-----------------*/
 
   #text {
@@ -503,6 +499,13 @@ input::placeholder {
     height: auto;
     border-radius: 5px;
   }
+
+
+
+
+
+
+
 
 }
 
